# pacman-tools

./: Cargo.toml  core.db
dump/64gram-desktop-1:1.1.58-1/: desc
dump/adaptivemm-1.0.0-1/: desc
dump/adios-dkms-1.5.3-1/: desc
dump/adjustor-3.7.7-1/: desc
dump/adwaita-color-schemes-0.9.2-1/: desc
dump/adwaita-qt-git-1.4.0.r12.g85670f8-1/: desc
dump/adwaita-qt5-1.4.2-2/: desc
dump/adwaita-qt6-1.4.2-2/: desc
dump/afdko-4.0.2-2/: desc
dump/aic94xx-firmware-30-10/: desc
dump/air-1.61.1-1/: desc
dump/ajantv2-dkms-1:17.1.0-2/: desc
dump/ajantv2-tools-1:17.1.0-2/: desc
dump/akeo-fs-bin-1.9-1/: desc
dump/alpm_octopi_utils-1.0.2-9/: desc
dump/amd-ucode-git-20241220.9e1d9ae6-1/: desc
dump/ananicy-cpp-git-1.1.1.r1.g98c55cf-1/: desc
dump/ananicy-rules-git-2.2.1.r302.ga1c2fd0-1/: desc
dump/ant-dracula-kde-theme-git-v4.0.0.r28.ga0b0ab4-1/: desc
dump/ant-dracula-kvantum-theme-git-v4.0.0.r28.ga0b0ab4-1/: desc
dump/ant-dracula-theme-git-4.0.0.r10.ge93c5d8-1/: desc
dump/apparmor.d-git-0.3130-1/: desc
dump/appimagelauncher-2.2.0-8/: desc
dump/apple-t2-audio-config-0.3-2/: desc
dump/arch-audit-git-0.1.20.r0.gb9f7220-1/: desc
dump/archlinux-keyring-20250123.1-2/: desc
dump/aspnet-runtime-bin-9.0.1.sdk102-2/: desc
dump/aspnet-targeting-pack-bin-9.0.1.sdk102-2/: desc
dump/ast-firmware-501-1/: desc
dump/asusctl-6.1.5-0.1/: desc
dump/aura-4.0.8-1/: desc
dump/aura-git-4.0.8.r0.g446c12e-1/: desc
pacman_db_util/: Cargo.toml
pacman_db_util/src/: lib.rs
pacman_db_util/src/db/: database.rs
src/: actions.rs  main.rs
(+758 files in other folders)
