[package]
name = "pacman_db_util"
version = "0.1.0"
edition = "2024"

[dependencies]

flate2 = { version = "1.1.0", features = ["miniz_oxide"] }
serde = { version = "1.0.219", features = ["derive"], optional = true}
tar = "0.4.43"
thiserror = "2.0.11"
zstd = "0.13.2"

[features]
default = ["serde-types"]
serde-types=["serde"]
